tests/saws/fixtures/invalid/04_trailing_comma.saws
name,age,
"Alice",30,true
